--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;700;800&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 <body>
@@ -17,17 +17,17 @@
     <div class="container">
       <div class="navbar-top">
         <a href="#" class="logo">
-          <img src="img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
+          <img src="src/img/horizontal-logo.svg" alt="Logo: Best Tour Plan" class="logo__image">
         </a>
         <form action="#" class="search navbar__search">
           <input type="text" class="search__input" placeholder="Search Location">
           <button class="search__button">
-            <img src="img/search.svg" alt="icon: search">
+            <img src="src/img/search.svg" alt="icon: search">
           </button>
         </form>
 
         <a href="#" class="user navbar__user">
-          <img src="img/user-avatar.JPG" alt="avatar: Nathan" class="user__avatar">
+          <img src="src/img/user-avatar.JPG" alt="avatar: Nathan" class="user__avatar">
           <span class="user__name">Nathan</span>
         </a>
         <!-- /.user -->
